# ModLinksShaVerifier

./: Cargo.toml
.github/workflows/: build-and-test.yml  clippy-check.yml
src/: main.rs
src/model/: apilinks.rs  file_def.rs  links.rs  mod.rs  modlinks.rs  verify.rs
test/modlinks/: correct.xml
